# LockHunter

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettingsExample.json  LICENSE  README.md
Python/: clang_tidy_cache.bat  clang_tidy_cache.py
include/: FileLockDetector.h  LockHunter.h  ProcessFactory.h  ProcessHandler.h  VirusTotal.h
resources/: lockfile.cpp
src/: FileLockDetector.cpp  LockHunter.cpp  ProcessFactory.cpp  ProcessHandler.cpp  VirusTotal.cpp  main.cpp
